--- a/templates/soup.html
+++ b/templates/soup.html
@@ -8,8 +8,7 @@
 	background-color: #d51;
 	height: 250px;
 	width: 250px;
-	margin-left: 40%;
-	margin-top: 20px;
+
 }
 
 .service-image{
@@ -17,6 +16,7 @@
 	padding: 20px;
 	margin-top: 38%;
 	width: 100%;
+
 }
 </style>
 
@@ -24,9 +24,11 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 	<body>
 		<div class="container-fluid">
+			<div class="jumbotron">
 				<div class="service-color">
 					<img class="image-responsive service-image" alt="200x200" src="http://g.fool.com/art/newsletters/1069/site/logo.png"/>
 				</div>
+			</div>
 			
 
             <div class="table-responsive">
