--- a/templates/soup.html
+++ b/templates/soup.html
@@ -21,7 +21,7 @@
 </style>
 
 <html>
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="/static/css/bootstrap.min.css" rel="stylesheet">
 	<body>
 		<div class="container-fluid">
 			<div class="jumbotron">
@@ -29,8 +29,6 @@
 					<img class="image-responsive service-image" alt="200x200" src="http://g.fool.com/art/newsletters/1069/site/logo.png"/>
 				</div>
 			</div>
-			
-
             <div class="table-responsive">
 	            <table class="table table-striped">
 	                <thead>
@@ -41,27 +39,12 @@
 		                </tr>
 		            </thead>
 		            <tbody>
+                        {% for pick in picks %}
 		                <tr>
-		                  <td>APPL</td>
+                            <td>{{ pick }}</td>
 		                  <td>X</td>
 		                </tr>
-		                <tr>
-		                  <td>INVN</td>
-		                  <td>X</td>
-		                </tr>
-		                <tr>
-		                  <td>COH</td>
-		                  <td></td>
-		                </tr>
-		                <tr>
-		                  <td>NKE</td>
-		                  <td></td>
-		                </tr>
-		                <tr>
-		                  <td>F</td>
-		                  <td></td>
-		                </tr>
-		                
+                        {% endfor %}
 	              	</tbody>
             	</table>
           	</div>
