--- a/templates/soup.html
+++ b/templates/soup.html
@@ -35,9 +35,10 @@
 
 <html>
 <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+<link href="{{ css }}" rel="stylesheet">
 	<body>
 		<div class="container-fluid">
-				<div class="service-color">
+				<div id="hd-wrapper" class="service-color">
                     <img class="image-responsive service-image" alt="200x200" src="http://g.fool.com/art/newsletters/{{ your_soup.service_id }}/site/logo.png"/>
 				</div>
 
