--- a/templates/soup.html
+++ b/templates/soup.html
@@ -55,7 +55,15 @@
 			        </h3>
 			    </div>
 			    <div class="panel-body">
-			        Blurb about this service
+                    <p>At <em>Rule Breakers</em>, we focus primarily on underappreciated growth stocks with solid management and a sustainable business strategy. We also ascribe to <a href="/1069/about/6-signs-of-a-rule-breaker.aspx">six unique investing criteria</a>:</p>
+                    <ol>
+                            <li>We look for top dogs and first movers in important emerging industries.</li>
+                                <li>We seek out companies with sustainable advantage gained through business momentum, patent protection, visionary leadership, or inept competitors.</li>
+                                    <li>We home in on strong past price appreciation, because the best growth stocks continue rising. Their advantages allow them to sustain remarkable earnings and cash flow growth and to win new converts among the ranks of investors.</li>
+                                        <li>We look for good management and smart backing.</li>
+                                            <li>We hunt for strong consumer appeal, often in the way of a strong brand that can reinforce itself and make sustaining extraordinary growth that much easier.</li>
+                                                <li>We zero in on stocks that are considered grossly overvalued, according to at least one significant constituent in the financial media. This is one way we weed out the "obviously great" companies that are overvalued. We <em>love</em> when a major media source says it doesn't like a stock.</li>
+                                                  </ol>
 			    </div>
 		    </div>
 
