--- a/templates/soup.html
+++ b/templates/soup.html
@@ -55,7 +55,7 @@
 			        </h3>
 			    </div>
 			    <div class="panel-body">
-                    <p>At <em>Rule Breakers</em>, we focus primarily on underappreciated growth stocks with solid management and a sustainable business strategy. We also ascribe to <a href="/1069/about/6-signs-of-a-rule-breaker.aspx">six unique investing criteria</a>:</p>
+                    <p>At <em>Rule Breakers</em>, we focus primarily on underappreciated growth stocks with solid management and a sustainable business strategy. We also ascribe to <a href="http://newsletters.fool.com/1069/about/6-signs-of-a-rule-breaker.aspx">six unique investing criteria</a>:</p>
                     <ol>
                             <li>We look for top dogs and first movers in important emerging industries.</li>
                                 <li>We seek out companies with sustainable advantage gained through business momentum, patent protection, visionary leadership, or inept competitors.</li>
